Bug 151844 - EMR_EXTSELECTCLIPRGN does not factor in window origin coordinates
Summary: EMR_EXTSELECTCLIPRGN does not factor in window origin coordinates
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Paris Oplopoios
URL:
Whiteboard: target:7.5.0
Keywords: filter:emf
Depends on:
Blocks:
 
Reported: 2022-10-31 17:14 UTC by Paris Oplopoios
Modified: 2022-11-08 09:53 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file (508 bytes, image/emf)
2022-10-31 17:14 UTC, Paris Oplopoios
Details
LO left, PPoint right (2.26 KB, image/png)
2022-10-31 17:18 UTC, Paris Oplopoios
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paris Oplopoios 2022-10-31 17:14:48 UTC
Created attachment 183352 [details]
Example file

EMR_EXTSELECTCLIPRGN clips text (drawn with EMR_EXTTEXTOUTW) in the attached file even though it shouldn't be clipped because of an earlier EMR_SETWINDOWORGEX drawing command that sets the window origin y to -10.
Comment 1 Paris Oplopoios 2022-10-31 17:18:09 UTC
Created attachment 183353 [details]
LO left, PPoint right
Comment 2 Paris Oplopoios 2022-10-31 17:22:49 UTC
I am working on this.
Comment 3 Commit Notification 2022-11-08 09:51:33 UTC
Paris Oplopoios committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b9eaed7a4c484dde0b5c61b34b4beb60a101f661

tdf#151844 Make EMR_EXTSELECTCLIPRGN factor in WinOrg coordinates

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.